# vista-rpms-archive

./: .gitignore  .index_tracker.db  README.md  config.example.toml  config.toml  download-ihs-ftp.py  download-vistapedia.py  download.sh  extract.py  index_files.py  main.py  prod-config.toml  prod-config.yaml  pyproject.toml  test_qdrant.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
scripts/: validate_chunking.py
specs/001-doc-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-doc-extraction/checklists/: requirements.md
specs/002-qdrant-indexing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-qdrant-indexing/checklists/: requirements.md
specs/002-qdrant-indexing/contracts/: config-schema.md
specs/003-gcs-pipeline-refactor/: plan.md  spec.md  tasks.md
specs/003-gcs-pipeline-refactor/checklists/: requirements.md
specs/004-docling-chunking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-docling-chunking/checklists/: requirements.md
specs/004-docling-chunking/contracts/: internal-api.md  qdrant-payload.md
src/: __init__.py  archive_extractor.py  chunker.py  config.py  embedder.py  extractor.py  file_classifier.py  gcs_client.py  index_loader.py  logging_config.py  pipeline.py  pipeline_gcs.py  qdrant_client.py  router.py  types.py  url_resolver.py
